--- a/util-demo/pom.xml
+++ b/util-demo/pom.xml
@@ -28,6 +28,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.focustech.fpay</groupId>
+      <artifactId>fpay-openapi-client</artifactId>
+      <version>3.0.7</version>
+    </dependency>
+    <dependency>
       <groupId>com.focustech.silk</groupId>
       <artifactId>order-center-api</artifactId>
       <version>0.0.1-SNAPSHOT</version>
