--- a/jdk-demo/pom.xml
+++ b/jdk-demo/pom.xml
@@ -7,6 +7,21 @@
   <groupId>com.study</groupId>
   <artifactId>jkjdemo</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-core</artifactId>
+      <version>3.2.11.RELEASE</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+      <version>2.1.2.RELEASE</version>
+    </dependency>
+
+  </dependencies>
   <build>
     <plugins>
       <plugin>
