--- a/sw_test_parent/sw_test_provider1/src/main/resources/application.properties
+++ b/sw_test_parent/sw_test_provider1/src/main/resources/application.properties
@@ -8,3 +8,11 @@ phenix.app=sw_test_provider1
 phenix.check-root-context=false
 phenix.registry-configs[0].registry-name=defaultRegistry
 phenix.registry-configs[0].registryUrl=${candy.zk.url}
+
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url = jdbc:oracle:thin:@192.168.51.120:1521:silkdb
+spring.datasource.username= silkord
+spring.datasource.password= silkord1234
+
+mybatis.mapper-locations= classpath:/mapper/**/*Mapper.xml
+mybatis.type-aliases-package=com.study.provider1.entity
