--- a/serialize-demo/pom.xml
+++ b/serialize-demo/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.73</version>
         </dependency>
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.63</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
