--- a/sw_test_parent/pom.xml
+++ b/sw_test_parent/pom.xml
@@ -42,6 +42,12 @@
       </dependency>
 
       <dependency>
+        <groupId>com.oracle.ojdbc</groupId>
+        <artifactId>ojdbc8</artifactId>
+        <version>19.3.0.0</version>
+      </dependency>
+
+      <dependency>
         <groupId>com.focus</groupId>
         <artifactId>phenix-spring-boot-starter</artifactId>
         <version>${phenix-spring-boot.version}</version>
