--- a/sw_test_parent/sw_test_provider1/pom.xml
+++ b/sw_test_parent/sw_test_provider1/pom.xml
@@ -13,6 +13,23 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo</artifactId>
+      <version>2.7.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.oracle.ojdbc</groupId>
+      <artifactId>ojdbc8</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.study</groupId>
       <artifactId>sw_test_api</artifactId>
       <version>${project.version}</version>
@@ -51,6 +68,12 @@
     <dependency>
       <groupId>org.apache.skywalking</groupId>
       <artifactId>apm-toolkit-logback-1.x</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.1</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
