--- a/util-demo/pom.xml
+++ b/util-demo/pom.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.7.RELEASE</version>
+  </parent>
 
   <groupId>com.study</groupId>
   <artifactId>util</artifactId>
@@ -28,22 +33,31 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.jasypt</groupId>
+      <artifactId>jasypt</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
       <groupId>com.focustech.fpay</groupId>
       <artifactId>fpay-openapi-client</artifactId>
       <version>3.0.7</version>
     </dependency>
-    <dependency>
-      <groupId>com.focustech.silk</groupId>
-      <artifactId>order-center-api</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+    <!-- <dependency>
+       <groupId>com.focustech.silk</groupId>
+       <artifactId>order-center-api</artifactId>
+       <version>0.0.1-SNAPSHOT</version>
+     </dependency>-->
 
-    <dependency>
+    <!--<dependency>
       <groupId>com.focustech.utils</groupId>
       <artifactId>mic_encrypt</artifactId>
       <version>1.1</version>
+    </dependency>-->
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.0</version>
     </dependency>
-
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
@@ -72,5 +86,37 @@
       <version>2.1.3</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
+    </dependency>
+    <!-- <dependency>
+       <groupId>commons-logging</groupId>
+       <artifactId>commons-logging</artifactId>
+       <version>1.2</version>
+     </dependency>-->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>18.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <!--<dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.1.9.RELEASE</version>
+    </dependency>-->
   </dependencies>
 </project>
