--- a/util-demo/pom.xml
+++ b/util-demo/pom.xml
@@ -118,5 +118,10 @@
       <artifactId>spring-web</artifactId>
       <version>5.1.9.RELEASE</version>
     </dependency>-->
+    <dependency>
+      <groupId>net.sourceforge.javacsv</groupId>
+      <artifactId>javacsv</artifactId>
+      <version>2.1</version>
+    </dependency>
   </dependencies>
 </project>
