--- a/springboottest/pom.xml
+++ b/springboottest/pom.xml
@@ -60,6 +60,10 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+    </dependency>
 
   </dependencies>
 
